<resources>
    <string name="app_name">Sample App</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_to_continue">Please Sign In to continue</string>
    <string name="please_sign_up_to_continue">Please Sign Up to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="test">Test</string>
    <string name="home_label">Home</string>
    <string name="sign_up">Sign Up</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
</resources>